--- a/lms/templates/dashboard/_dashboard_course_listing.html
+++ b/lms/templates/dashboard/_dashboard_course_listing.html
@@ -49,11 +49,11 @@ from student.helpers import (
 
     % if show_courseware_link:
       % if not is_course_blocked:
-        <a href="${course_target}" class="cover">
+        <a href="${course_target}" class="cover" aria-hidden="true">
         <img src="${course_image_url(course)}" alt="${_('{course_number} {course_name} Home Page').format(course_number=course.number, course_name=course.display_name_with_default) |h}" />
       </a>
         % else:
-        <a class="fade-cover">
+        <a class="fade-cover" aria-hidden="true">
         <img src="${course_image_url(course)}" alt="${_('{course_number} {course_name} Home Page').format(course_number=course.number, course_name=course.display_name_with_default) |h}" />
       </a>
         % endif
