--- a/lms/templates/navigation-edx.html
+++ b/lms/templates/navigation-edx.html
@@ -37,7 +37,7 @@ site_status_msg = get_site_status_msg(course_id)
 </%block>
 
 <header class="${"global slim" if course and not disable_courseware_header else "global-new"}" aria-label="Main" role="banner">
-  <nav aria-label="Main">
+  <div class="${'rwd ' if responsive else ''}wrapper-header nav-container">
     <h1 class="logo" itemscope="" itemtype="http://schema.org/Organization">
       <a href="${marketing_link('ROOT')}" title="Home page" itemprop="url">
         <%block name="navigation_logo">
@@ -51,28 +51,30 @@ site_status_msg = get_site_status_msg(course_id)
     % endif
 
     % if user.is_authenticated():
-    <div class="left nav-global authenticated">
-      <%block name="navigation_global_links_authenticated">
-          <li class="nav-global-01">
-            <a href="${marketing_link('HOW_IT_WORKS')}">${_("How it Works")}</a>
-          </li>
-          <li class="nav-global-02">
-            <a href="${marketing_link('COURSES')}">${_("Find Courses")}</a>
-          </li>
-          <li class="nav-global-03">
-            <a href="${marketing_link('SCHOOLS')}">${_("Schools & Partners")}</a>
-          </li>
-      </%block>
-    </div>
+      % if not course or disable_courseware_header:
+    <nav aria-label="Main" class="nav-main">
+      <div class="left nav-global authenticated">
+        <%block name="navigation_global_links_authenticated">
+            <li class="nav-global-01">
+              <a href="${marketing_link('HOW_IT_WORKS')}">${_("How it Works")}</a>
+            </li>
+            <li class="nav-global-02">
+              <a href="${marketing_link('COURSES')}">${_("Find Courses")}</a>
+            </li>
+            <li class="nav-global-03">
+              <a href="${marketing_link('SCHOOLS')}">${_("Schools & Partners")}</a>
+            </li>
+        </%block>
+      </div>
+    </nav>
+      % endif
 
     <ol class="user">
       <li class="primary">
         <a href="${reverse('dashboard')}" class="user-link">
           <i class="icon fa fa-home" aria-hidden="true"></i>
           <span class="sr">${_("Dashboard for:")}</span>
-          <div>
-          ${user.username}
-          </div>
+          <div>${user.username}</div>
         </a>
       </li>
       <li class="primary">
@@ -89,55 +91,58 @@ site_status_msg = get_site_status_msg(course_id)
     </ol>
 
       % if should_display_shopping_cart_func(): # see shoppingcart.context_processor.user_has_cart_context_processor
-        <ol class="user">
-          <li class="primary">
-            <a class="shopping-cart" href="${reverse('shoppingcart.views.show_cart')}">
-              <i class="icon fa fa-shopping-cart"></i> ${_("Shopping Cart")}
-            </a>
-          </li>
-        </ol>
-      % endif
-    % else:
-    <ol class="left nav-global">
-      <%block name="navigation_global_links">
-        % if microsite.get_value('ENABLE_MKTG_SITE', settings.FEATURES.get('ENABLE_MKTG_SITE', False)):
-          <li class="nav-global-01">
-            <a href="${marketing_link('HOW_IT_WORKS')}">${_("How it Works")}</a>
-          </li>
-          <li class="nav-global-02">
-            <a href="${marketing_link('COURSES')}">${_("Find Courses")}</a>
-          </li>
-          <li class="nav-global-03">
-            <a href="${marketing_link('SCHOOLS')}">${_("Schools & Partners")}</a>
-          </li>
-        % endif
-      </%block>
+    <ol class="user">
+      <li class="primary">
+        <a class="shopping-cart" href="${reverse('shoppingcart.views.show_cart')}">
+          <i class="icon fa fa-shopping-cart"></i> ${_("Shopping Cart")}
+        </a>
+      </li>
     </ol>
-
-    <div class="right nav-courseware">
-      % if not settings.FEATURES['DISABLE_LOGIN_BUTTON']:
-        % if course and settings.FEATURES.get('RESTRICT_ENROLL_BY_REG_METHOD') and course.enrollment_domain:
-        <div class="nav-courseware-01">
-          <a class="cta cta-register" href="${reverse('course-specific-register', args=[course.id.to_deprecated_string()])}">${_("Register")}</a>
-        </div>
-        % else:
-        <div class="nav-courseware-01">
-          <a class="cta cta-register" href="/register">${_("Register")}</a>
-        </div>
-        % endif
       % endif
-      <div class="nav-courseware-02">
+
+    % else:
+    <nav aria-label="Main" class="nav-main">
+      <ol class="left nav-global">
+        <%block name="navigation_global_links">
+            <li class="nav-global-01">
+              <a href="${marketing_link('HOW_IT_WORKS')}">${_("How it Works")}</a>
+            </li>
+            <li class="nav-global-02">
+              <a href="${marketing_link('COURSES')}">${_("Find Courses")}</a>
+            </li>
+            <li class="nav-global-03">
+              <a href="${marketing_link('SCHOOLS')}">${_("Schools & Partners")}</a>
+            </li>
+        </%block>
+      </ol>
+    </nav>
+
+    <nav aria-label="Account Management" class="nav-account-management">
+      <div class="right nav-courseware">
         % if not settings.FEATURES['DISABLE_LOGIN_BUTTON']:
-            % if course and settings.FEATURES.get('RESTRICT_ENROLL_BY_REG_METHOD') and course.enrollment_domain:
-            <a class="cta cta-login nav-courseware-button" href="${reverse('course-specific-login', args=[course.id.to_deprecated_string()])}${login_query()}">${_("Sign in")}</a>
-            % else:
-            <a class="cta cta-login nav-courseware-button" href="/login${login_query()}">${_("Sign in")}</a>
-            % endif
+          % if course and settings.FEATURES.get('RESTRICT_ENROLL_BY_REG_METHOD') and course.enrollment_domain:
+          <div class="nav-courseware-01">
+            <a class="cta cta-register" href="${reverse('course-specific-register', args=[course.id.to_deprecated_string()])}">${_("Register")}</a>
+          </div>
+          % else:
+          <div class="nav-courseware-01">
+            <a class="cta cta-register" href="/register">${_("Register")}</a>
+          </div>
+          % endif
         % endif
+        <div class="nav-courseware-02">
+          % if not settings.FEATURES['DISABLE_LOGIN_BUTTON']:
+              % if course and settings.FEATURES.get('RESTRICT_ENROLL_BY_REG_METHOD') and course.enrollment_domain:
+              <a class="cta cta-login nav-courseware-button" href="${reverse('course-specific-login', args=[course.id.to_deprecated_string()])}${login_query()}">${_("Sign in")}</a>
+              % else:
+              <a class="cta cta-login nav-courseware-button" href="/login${login_query()}">${_("Sign in")}</a>
+              % endif
+          % endif
+        </div>
       </div>
-    </div>
+    </nav>
     % endif
-  </nav>
+  </div>
 </header>
 % if course:
 <!--[if lte IE 8]>
