--- a/lms/templates/dashboard.html
+++ b/lms/templates/dashboard.html
@@ -93,7 +93,6 @@
             <% course_requirements = courses_requirements_not_met.get(course.id) %>
             <%include file='dashboard/_dashboard_course_listing.html' args="course=course, enrollment=enrollment, show_courseware_link=show_courseware_link, cert_status=cert_status, show_email_settings=show_email_settings, course_mode_info=course_mode_info, show_refund_option = show_refund_option, is_paid_course = is_paid_course, is_course_blocked = is_course_blocked, verification_status=course_verification_status, course_requirements=course_requirements" />
       % endfor
-
       </ul>
     % else:
       <section class="empty-dashboard-message">
@@ -122,6 +121,7 @@
            % endfor
              </ul>
       % endfor
+      </div>
     % endif
   </section>
   <section class="profile-sidebar">
@@ -253,8 +253,6 @@
     </form>
   </div>
 </section>
-
-
 
 <section id="password_reset_complete" class="modal" aria-hidden="true">
   <div class="inner-wrapper" role="dialog" aria-labelledby="password-reset-email">
