--- a/lms/static/sass/multicourse/_dashboard.scss
+++ b/lms/static/sass/multicourse/_dashboard.scss
@@ -430,7 +430,7 @@
               pointer-events: none;
               min-width: ($baseline*6.5);
 
-              &.is-expanded {
+              &.is-visible {
                 display: block;
                 pointer-events: auto;
               }
