Add screen reader text to logo

--- a/lms/templates/navigation-edx.html
+++ b/lms/templates/navigation-edx.html
@@ -42,6 +42,7 @@ site_status_msg = get_site_status_msg(course_id)
       <a href="${marketing_link('ROOT')}" title="Home page" itemprop="url">
         <%block name="navigation_logo">
             <img src="${static.url(branding.get_logo_url())}" alt="${platform_name()}" title="${platform_name()}" itemprop="url" />
+            <span class="sr">${_("Home Page")}</span>
         </%block>
       </a>
     </h1>
