--- a/lms/templates/dashboard/_dashboard_course_listing.html
+++ b/lms/templates/dashboard/_dashboard_course_listing.html
@@ -163,7 +163,7 @@ from student.helpers import (
                 <i class="fa fa-twitter" aria-hidden="true"></i>
               </a>
               <div class="wrapper-action-more">
-                <a href="#" class="action action-more" aria-haspopup="true" aria-expanded="false">
+                <a href="#" class="action action-more" aria-haspopup="true" aria-expanded="false" data-course-number="${course.number | h}">
                   <span class="sr">Course options dropdown</span>
                   <i class="fa fa-cog" aria-hidden="true"></i>
                 </a>
