Hide Facebook/Twitter share buttons

--- a/lms/templates/dashboard/_dashboard_course_listing.html
+++ b/lms/templates/dashboard/_dashboard_course_listing.html
@@ -112,14 +112,14 @@ from student.helpers import (
               % endif
               % endif
 
-              <a href="#" data-tooltip="${_('Share on Facebook')}" class="action action-facebook" aria-haspopup="true" aria-expanded="false">
+              <!-- <a href="#" data-tooltip="${_('Share on Facebook')}" class="action action-facebook" aria-haspopup="true" aria-expanded="false">
                 <span class="sr">Facebook</span>
                 <i class="fa fa-facebook" aria-hidden="true"></i>
-              </a>
-              <a href="#" data-tooltip="${_('Share on Twitter')}" class="action action-twitter" aria-haspopup="true" aria-expanded="false">
+              </a> -->
+              <!-- <a href="#" data-tooltip="${_('Share on Twitter')}" class="action action-twitter" aria-haspopup="true" aria-expanded="false">
                 <span class="sr">Twitter</span>
                 <i class="fa fa-twitter" aria-hidden="true"></i>
-              </a>
+              </a> -->
               <div class="wrapper-action-more">
                 <a href="#" class="action action-more" aria-haspopup="true" aria-expanded="false" data-course-number="${course.number | h}">
                   <span class="sr">Course options dropdown</span>
