--- a/common/lib/capa/capa/templates/choicegroup.html
+++ b/common/lib/capa/capa/templates/choicegroup.html
@@ -6,7 +6,7 @@
             <span class="sr">
                 %for choice_id, choice_description in choices:
                 % if choice_id in value:
-                    ${choice_description}, 
+                    ${choice_description},
                 %endif
                 %endfor
                 ${status.display_name}
@@ -16,7 +16,7 @@
     </div>
 
     <fieldset>
-
+        <legend>${label}</legend>
         % for choice_id, choice_description in choices:
         <label for="input_${id}_${choice_id}"
             ## If the student has selected this choice...
