--- a/lms/templates/dashboard/_dashboard_course_listing.html
+++ b/lms/templates/dashboard/_dashboard_course_listing.html
@@ -1,4 +1,4 @@
-<%page args="course, enrollment, show_courseware_link, cert_status, show_email_settings, course_mode_info, show_refund_option, is_paid_course, is_course_blocked, verification_status, course_requirements" />
+<%page args="course, enrollment, show_courseware_link, cert_status, show_email_settings, course_mode_info, show_refund_option, is_paid_course, is_course_blocked, verification_status, course_requirements, share_settings" />
 
 <%!
 import urllib
@@ -114,55 +114,62 @@ from student.helpers import (
               % endif
               % endif
 
-              <% share_url = urllib.quote_plus('http://www.edx.org' + course_target) %>
-              <% share_text = 'Marketing copy goes here' %>
-              <% share_window_name = 'shareWindow' %>
-              <% share_window_config = 'toolbar=no, location=no, status=no, menubar=no, scrollbars=yes, resizable=yes, width=640, height=480' %>
-              <div class="wrapper-action-share">
-                <style>
-                .share-buttons{
-                  list-style: none;
-                }
-                .share-buttons li{
-                  display: inline;
-                }
-                </style>
-                <ul class="share-buttons">
-                  <li>
-                    <% facebook_url = 'https://www.facebook.com/sharer/sharer.php?u=' + share_url + '&t=' + share_text %>
-                    <a
-                      data-tooltip="${_('Share on Facebook')}"
-                      class="action action-facebook"
-                      aria-haspopup="true"
-                      aria-expanded="false"
-                      href="${facebook_url}"
-                      target="_blank"
-                      title="Share on Facebook"
-                      onclick="window.open('${facebook_url}', '${share_window_name}', '${share_window_config}'); return false;">
-                      <span class="sr">Facebook</span>
-                      <i class="fa fa-facebook" aria-hidden="true"></i>
-                    </a>
-                  </li>
-                  <li>
-                    <% twitter_url = 'https://twitter.com/intent/tweet?text=' + share_text + ':%20'  + share_url %>
-                    <a
-                      data-tooltip="${_('Share on Twitter')}"
-                      class="action action-twitter"
-                      aria-haspopup="true"
-                      aria-expanded="false"
-                      href="${twitter_url}"
-                      target="_blank"
-                      title="Share on Twitter"
-                      href="${twitter_url}"
-                      target="_blank"
-                      title="Tweet"
-                      onclick="window.open('${twitter_url}', '${share_window_name}', '${share_window_config}'); return false;">
-                      <span class="sr">Twitter</span>
-                      <i class="fa fa-twitter" aria-hidden="true"></i>
-                    </a>
-                  </li>
-                </ul>
-              </div>
+              % if share_settings:
+                <% share_url = urllib.quote_plus(request.META['HTTP_HOST'] + course_target) %>
+                <% share_text = 'Marketing copy goes here' %>
+                <% share_window_name = 'shareWindow' %>
+                <% share_window_config = 'toolbar=no, location=no, status=no, menubar=no, scrollbars=yes, resizable=yes, width=640, height=480' %>
+                <div class="wrapper-action-share">
+                  <style>
+                  .share-buttons{
+                    list-style: none;
+                  }
+                  .share-buttons li{
+                    display: inline;
+                  }
+                  </style>
+                  <ul class="share-buttons">
+                    <% print share_settings %>
+                    % if share_settings.get('FACEBOOK_SHARING', False):
+                    <li>
+                      <% facebook_url = 'https://www.facebook.com/sharer/sharer.php?u=' + share_url + '&t=' + share_text %>
+                      <a
+                        data-tooltip="${_('Share on Facebook')}"
+                        class="action action-facebook"
+                        aria-haspopup="true"
+                        aria-expanded="false"
+                        href="${facebook_url}"
+                        target="_blank"
+                        title="Share on Facebook"
+                        onclick="window.open('${facebook_url}', '${share_window_name}', '${share_window_config}'); return false;">
+                        <span class="sr">Facebook</span>
+                        <i class="fa fa-facebook" aria-hidden="true"></i>
+                      </a>
+                    </li>
+                    % endif
+                    % if share_settings.get('TWITTER_SHARING', False):
+                    <li>
+                      <% twitter_url = 'https://twitter.com/intent/tweet?text=' + share_text + ':%20'  + share_url %>
+                      <a
+                        data-tooltip="${_('Share on Twitter')}"
+                        class="action action-twitter"
+                        aria-haspopup="true"
+                        aria-expanded="false"
+                        href="${twitter_url}"
+                        target="_blank"
+                        title="Share on Twitter"
+                        href="${twitter_url}"
+                        target="_blank"
+                        title="Tweet"
+                        onclick="window.open('${twitter_url}', '${share_window_name}', '${share_window_config}'); return false;">
+                        <span class="sr">Twitter</span>
+                        <i class="fa fa-twitter" aria-hidden="true"></i>
+                      </a>
+                    </li>
+                    % endif
+                  </ul>
+                </div>
+              % endif
 
               <div class="wrapper-action-more">
                 <a href="#" class="action action-more" aria-haspopup="true" aria-expanded="false" data-course-number="${course.number | h}">
